Update job title

--- a/MySite/MySite.csproj
+++ b/MySite/MySite.csproj
@@ -193,7 +193,6 @@
     <Content Include="Scripts\app\app-data.js" />
     <Content Include="Scripts\app\app-global.js" />
     <Content Include="Scripts\app\app-ui.js" />
-    <Content Include="Content\docs\BrentKuzmanich_Resume.pdf" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -202,6 +201,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\docs\BrentKuzmanich_Resume.pdf" />
     <None Include="Properties\PublishProfiles\brentkuzmanich.com - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\blockui.js" />
@@ -270,7 +270,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>52638</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:55894/</IISUrl>
+          <IISUrl>https://localhost:44337/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
